changed navigation bar text to upprcase in all pages

--- a/exercis.html
+++ b/exercis.html
@@ -33,9 +33,9 @@
  
 <ul>
     <li><a href="exercis.html">HOME</a></li>
-    <li><a href="ukurasa2.html">about</a></li>
-    <li><a href="contact.html">contanct</a></li>
-    <li><a href="student.html">result</a></li>
+    <li><a href="ukurasa2.html">ABOUT</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
+    <li><a href="student.html">RESULT</a></li>
 
 </ul>
    <h1>STATE UNIVERSITY OF ZANZIBAR</h1>
