--- a/ukurasa2.html
+++ b/ukurasa2.html
@@ -30,9 +30,9 @@
 <body >
     <ul>
     <li><a href="exercis.html">HOME</a></li>
-    <li><a href="ukurasa2.html">about</a></li>
-    <li><a href="contact.html">contanct</a></li>
-    <li><a href="student.html">result</a></li>
+    <li><a href="ukurasa2.html">ABOUT</a></li>
+    <li><a href="contact.html">CONTACT</a></li>
+    <li><a href="student.html">RESULT</a></li>
 
     </ul>
     <h1>ABOUT</h1>
